# aiospbstu

./: .gitignore  Pipfile  README.md  README.rst  pyproject.toml  readme.md  requirements.txt  setup.py
aiospbstu/: __init__.py  api.py  base.py  exceptions.py
aiospbstu/types/: __init__.py  auditory.py  base.py  building.py  day.py  faculty.py  group.py  lesson.py  method.py  schedule.py  teacher.py  type_obj.py  week.py
aiospbstu/utils/: date.py  error_handler.py  strenum.py  string.py
